RadTest Dev/src/objects/Hospital__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>Enter the Address</inlineHelpText>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hospital_Type__c</fullName>
        <label>Hospital Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dental hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eye Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Speciality Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ortho Hospital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Hospital</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Eye_Hospitals</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Email__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hospital_Type__c</field>
            <operation>equals</operation>
            <value>Eye Hospital,General Hospital</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Eye Hospitals</label>
        <sharedTo>
            <role>CFO</role>
            <role>DirectorDirectSales</role>
            <role>MarketingTeam</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Test_Queue_Hospital</fullName>
        <filterScope>Queue</filterScope>
        <label>Test Queue</label>
        <queue>Test_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Hospital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>